tests/NormalTests/paczka1/fuzzy1/16730561.err
Error in line 4: AHe61 A59 72,0
Error in line 19: ysb S61E 1,1
Error in line 18: TC2 A622 52,5
Error in line 29: AHe61 S612 7,4
Error in line 31: KpkNG3 A622 -1,7
Error in line 27: TC2 A347 52,4
Error in line 14: KpkNG3 A622 33,7
Error in line 33: TC2 S612 20,7
Error in line 37: KpkNG3 S612 -6,5
